Another css bug squished

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -23,6 +23,9 @@
     transform: skewY(4deg);
     -webkit-backface-visibility: hidden;
     backface-visibility: initial;
+    box-shadow: 0px 10px 1px #ebdd3a;
+    -webkit-box-shadow:  0px 10px 1px #ebdd3a;
+    -moz-box-shadow: 0px 10px 1px #ebdd3a;
 }
 
 .header-container .header .header-container -inner {
