--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -36,9 +36,9 @@
     transform: skewY(4deg);
     -webkit-backface-visibility: hidden;
     backface-visibility: initial;
-    box-shadow: 1px 10px 1px #ebdd3a;
-    -webkit-box-shadow:  1px 10px 1px #ebdd3a;
-    -moz-box-shadow: 1px 10px 1px #ebdd3a;
+    box-shadow: 0px 10px 1px #ebdd3a;
+    -webkit-box-shadow:  0px 10px 1px #ebdd3a;
+    -moz-box-shadow: 0px 10px 1px #ebdd3a;
     transition: transform 1s;
 }
 
